--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <script src="script.js"></script>
 </head>
 <body>
-    <h1 class="title">My first Web Page</h1>
-    <h3>What this is</h3>
+    <h1 class="title" style="margin-bottom: 0;">My first web page</h1>
+    <h2 style="margin-top: 10px;" >What this is</h2>
     <p class="hero-text">Welcome to my first webpage. I created this webpage without the assitance of a webpage editor. Just my little text editor and keen <b id="hero-sub-text">understanding of html</b></p>
-    <h3>Why this is</h3>
+    <h2 >Why this is</h2>
     <ul class="ul-list">
         <li>To learn HTML</li>
-        <li>List Element<ol>
+        <li>List element<ol>
             <li>HOME</li>
             <li>FAQ</li>
             <li>Contact</li>
@@ -23,12 +23,12 @@
     </li>
         <li>Here I have created ordered and unordered list</li>
     </ul>
-<h3 >ZeusLearning.com</h3>
+<h2>ZeusLearning.com</h2>
 <a href="https://www.zeuslearning.com/" target="_blank">This link will open zeuslearning.com in new tab</a>
-<h3>On click of following image it will navigate to Google.com</h3>
-<a  href="https://www.google.com/" target="_blank"><img class="google-logo" src="googlelogo.png" alt="google-logo" height="100" width="200"></a>
+<h2>On click of following image navigate to Google.com</h2>
+<a  href="https://www.google.com/" target="_blank"><img class="google-logo" src="googleloggo.png" alt="google-logo" width="250"></a>
 
-<h4 style="color:gray">Some random table</h4>
+<h3 style="color:gray">Some random table</h3>
 
 <table class="ex-table" border="2">
     <tr>
@@ -52,7 +52,7 @@
         <td>Row 4, cell 3</td>
     </tr>
 </table>
-<h4 style="color:gray">Some random form</h4>
+<h3 style="color:gray">Some random form</h3>
 <form name="myForm" action="https://www.zeuslearning.com/" onsubmit="return valid()" method="post">
     <p><b>Note:</b> It looks the part but won't do a anything.</p>
     <label for="name">Name:</label>
@@ -62,7 +62,7 @@
     <label for="comments">Comments:</label>
     <br><br>
     <textarea rows="10" name="comments" id="comments" placeholder="Your comments" ></textarea>
-    <br><br>
+    <br>
     <p>Are you:</p>
     <input type="radio" name="gender" id="male" >
     <label for="male">Male </label>
@@ -70,7 +70,7 @@
     <input type="radio" name="gender" id="female" >
     <label for="female">Female </label>
     <br><br>
-    <button type="submit">Submit Query</button>
+    <button class="fbtn" type="submit">Submit Query</button>
 </form>
    
 </body>
